[project]
name = "ssurgo-viewer"
version = "0.1.0"
description = "Simple dash app that lets you draw or upload a shapefile of polygons and view ssurgo soil attributes for those polygons"
authors = [
    {name = "robinrank",email = "rrank@pivotbio.com"}
]
requires-python = ">=3.12"
dependencies = [
    "dash[async] (>=4.4.0,<5.0.0)",
    "plotly (>=6.9.0,<7.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "geopandas (>=1.1.4,<2.0.0)",
    "soildb (>=0.8.0,<0.9.0)",
    "ipykernel (>=7.3.0,<8.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "contextily (>=1.7.1,<2.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "dash-bootstrap-components (>=2.0.4,<3.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
